# swc-plugin-inferno

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
scripts/: patch-options.ts
src/: lib.rs
src/atoms/: mod.rs
src/inferno_flags/: mod.rs
src/jsx/: attr.rs  mod.rs  tests.rs  text.rs  vnode_args.rs
src/pure_annotations/: mod.rs  tests.rs
src/refresh/: hook.rs  mod.rs  tests.rs  util.rs
src/transformations/: lowercase_attrs.rs  mod.rs  parse_vnode_flag.rs  transform_attribute.rs
src/vnode_types/: mod.rs
tests/__swc_snapshots__/src/jsx/tests.rs/: class_name_should_be_in_fifth_parameter_as_string_when_its_component.js  class_name_should_be_in_third_parameter_as_string_when_its_element.js  component_array_empty_children.js  component_should_create_vnode_for_prop.js  component_should_prefer_child_element_over_children_props.js  component_should_prefer_prop_over_empty_children.js  component_should_use_prop_if_no_children_exists.js  contenteditbale_1.js  contenteditbale_2.js  contenteditbale_3.js  contenteditbale_4.js  contenteditbale_5.js  events_should_be_in_props.js  fragment_long_should_create_empty_create_fragment1.js  fragment_long_should_create_fragment.js  fragment_long_should_create_fragment_dynamic_children.js  fragment_long_should_create_fragment_keyed_children.js  fragment_long_should_create_fragment_keyed_children_2.js  fragment_long_should_create_fragment_non_keyed_children.js  fragment_long_should_create_fragment_non_keyed_children_2.js  fragments_syntax_should_create_fragment.js  fragments_syntax_should_create_fragment_keyed_children.js  fragments_syntax_should_create_fragment_non_keyed_children.js  issue_229.js  issue_351.js  issue_481.js  issue_4956.js  issue_517.js  issue_542.js  jsxmember_expressions_should_work.js  ported_arrow_functions.js  ported_attribute_html_entity_quote.js  ported_dont_coerce_expression_containers.js  ported_noop_honor_custom_jsx_pragma_option.js  ported_noop_jsx_without_retainlines_option.js  ported_noop_optimisation_ported_constant_elements.js  ported_noop_ported_honor_custom_jsx_comment_if_jsx_pragma_option_set.js  ported_noop_should_allow_pragmafrag_and_frag.js  ported_noop_should_properly_handle_comments_between_props.js  ported_should_add_quotes_es3.js  (+69 more)
tests/__swc_snapshots__/src/refresh/tests.rs/: gen_valid_hook_signatures_for_exotic_hooks.js  hook_signatures_should_include_custom_hook.js  include_hook_signature_in_commonjs.js  issue_6022.js  register_fn_expr_with_hooks.js  register_fn_with_hooks.js  register_fn_with_hooks_2.js  register_identifiers_used_in_create_element.js  register_likely_hoc_1.js  register_likely_hoc_2.js  register_likely_hoc_3.js  should_refresh_when_has_comment.js
tests/integration/fixture/jsx-dev-transform/: output.mjs
tests/integration/fixture/jsxdev-args-with-fragment/: output.js
tests/integration/fixture/jsxdev-fragment/: output.mjs
tests/integration/fixture/with-pragma/: output.mjs
tests/jsx/fixture/3/: output.mjs
tests/jsx/fixture/autoImport/.after-polyfills-script-not-supported/: input.js  output.js
tests/jsx/fixture/autoImport/.auto-import-react-source-type-script/: output.js
tests/jsx/fixture/autoImport/after-polyfills/: output.mjs
tests/jsx/fixture/autoImport/after-polyfills-2/: input.mjs  output.mjs
tests/jsx/fixture/autoImport/after-polyfills-compiled-to-cjs/: input.mjs  output.js
tests/jsx/fixture/autoImport/auto-import-react-source-type-module/: output.mjs
tests/jsx/fixture/autoImport/complicated-scope-module/: output.mjs
tests/jsx/fixture/autoImport/import-source/: options.json  output.mjs
tests/jsx/fixture/autoImport/import-source-pragma/: output.mjs
tests/jsx/fixture/autoImport/react-defined/: input.js  output.mjs
tests/jsx/fixture/cmt/1/: input.js  output.mjs
tests/jsx/fixture/issue-1446/: output.mjs
tests/jsx/fixture/issue-1933/: output.js
tests/jsx/fixture/issue-2037/: output.mjs
tests/jsx/fixture/issue-2177/: output.mjs
tests/jsx/fixture/issue-4070/: output.mjs
tests/jsx/fixture/issue-5072/: input.js  output.mjs
tests/jsx/fixture/issue-6931/: output.mjs
tests/jsx/fixture/issue-6939/: output.mjs
tests/jsx/fixture/issue-6987/: input.js  options.json  output.mjs
tests/jsx/fixture/refprop_test/: input.js  output.mjs
tests/script/integration/jsx-dev-transform/: output.js
tests/script/integration/jsxdev-args-with-fragment/: output.js
tests/script/integration/jsxdev-fragment/: output.js
tests/script/integration/with-pragma/: output.js
(+124 files in other folders)
