[package]
authors       = ["Havunen <sampo.kivisto@live.fi>"]
description   = "SWC plugin for InfernoJS."
documentation = "https://github.com/infernojs/swc-plugin-inferno"
edition       = "2021"
include       = ["Cargo.toml", "src/**/*.rs"]
license       = "MIT"
name          = "swc-plugin-inferno"
repository    = "https://github.com/infernojs/swc-plugin-inferno.git"
version       = "2.1.1"

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[features]
concurrent = ["rayon"]
default    = ["serde-impl"]
serde-impl = ["serde"]

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"

# Strip debug symbols
strip = "symbols"

[dependencies]
base64    = "0.22.1"
rayon     = { version = "1", optional = true }
serde     = { version = "1", features = ["derive"], optional = true }
sha-1     = "=0.10.1"

swc_core = { version = "10.7.0", features = [
    "swc_atoms",
    "swc_common",
    "swc_ecma_ast",
    "ecma_plugin_transform",
    "ecma_utils",
    "ecma_visit",
    "ecma_ast",
    "common",
] }
swc_ecma_parser            = { version = "6.0.2" }
swc_config                 = { version = "1" }

[dev-dependencies]
swc_ecma_codegen            = { version = "5.1.0" }
swc_ecma_transforms_compat  = { version = "8" }
swc_ecma_transforms_testing = { version = "7" }
swc_ecma_transforms         = { version = "9" }
testing                     = { version = "5" }
